--- a/index.html
+++ b/index.html
@@ -8,6 +8,19 @@
   <h1>Mi primera página</h1>
   <h3>Mi nombre es Benigno</h3>
   <p>mis lugares favoritos son: </p>
-  ul>li{Lugar $}*5
+  <ul>
+    <li>Lugar 1</li>
+    <li>Lugar 2</li>
+    <li>Lugar 3</li>
+    <li>Lugar 4</li>
+    <li>Lugar 5</li>
+  </ul>
+  <p>Mis odiomas favoritos</p>
+  <ul>
+    <li>Idioma 1</li>
+    <li>Idioma 2</li>
+    <li>Idioma 3</li>
+    <li>Idioma 4</li>
+  </ul>
 </body>
 </html>
